-finished random ships positioning logic

--- a/BattleSea/BattleSea.csproj
+++ b/BattleSea/BattleSea.csproj
@@ -130,14 +130,16 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\BattleField.cs" />
     <Compile Include="Models\BattleFieldCells.cs" />
+    <Compile Include="Models\Cell.cs" />
     <Compile Include="Models\CellState.cs" />
     <Compile Include="Models\Coordinate.cs" />
+    <Compile Include="Models\Game.cs" />
+    <Compile Include="Models\Player.cs" />
     <Compile Include="Models\Ship.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
