--- a/BattleSea/Web.config
+++ b/BattleSea/Web.config
@@ -11,6 +11,9 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <!--<sessionState mode="InProc"
+                    cookieless="false"
+                    timeout="20" />-->
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
