-added option to start the game -added option to fire -other stuff

--- a/BattleSea/BattleSea.csproj
+++ b/BattleSea/BattleSea.csproj
@@ -141,7 +141,9 @@
     <Compile Include="Models\Cell.cs" />
     <Compile Include="Models\CellState.cs" />
     <Compile Include="Models\Coordinate.cs" />
+    <Compile Include="Models\Exceptions\InvalidShotException.cs" />
     <Compile Include="Models\Game.cs" />
+    <Compile Include="Models\GameState.cs" />
     <Compile Include="Models\Player.cs" />
     <Compile Include="Models\Ship.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
