-added a couple of tests to Player.cs

--- a/BattleSeaTest/BattleSeaTest.csproj
+++ b/BattleSeaTest/BattleSeaTest.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Compile Include="BattlefieldTest.cs" />
     <Compile Include="GameTest.cs" />
+    <Compile Include="PlayerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
